# layout_lib

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/get_highlighted/: fallback.rs  linux.rs  mod.rs  windows.rs
src/get_highlighted/fallback/: tests.rs
src/get_highlighted/linux/: tests.rs
src/get_highlighted/windows/: tests.rs
src/keyboard_mapping/: fallback.rs  linux.rs  mod.rs  remap.rs  types.rs  windows.rs
src/keyboard_mapping/fallback/: tests.rs
src/keyboard_mapping/linux/: tests.rs
src/keyboard_mapping/remap/: tests.rs
src/keyboard_mapping/types/: tests.rs
src/keyboard_mapping/windows/: tests.rs
